Sniper Buddy: prevent Setup card from stretching

--- a/Projects/Sniper Buddy/src/css/mozula.css
+++ b/Projects/Sniper Buddy/src/css/mozula.css
@@ -449,6 +449,10 @@ tbody tr:hover {
   min-height: 0;
 }
 
+.sb-side > .card:first-child {
+  min-height: fit-content;
+}
+
 .sb-ref {
   flex: 1;
   min-height: 0;
